# OOP-Virtual-Museum-Project

./: .gitignore  CMakeLists.txt  MagazinSuveniruri.cpp  MagazinSuveniruri.h  MuseumRoom.cpp  MuseumRoom.h  README.md  SalaMuzeu.cpp  SalaMuzeu.h  SouvenirShop.cpp  SouvenirShop.h  client.cpp  client.h  client_VIP.cpp  client_VIP.h  feedback.txt  main.cpp  museum.cpp  museum.h  museum_data.in.txt  muzeu.cpp  muzeu.h  primarie.cpp  primarie.h  room.cpp  room.h  rooms_data.in.txt  sala.cpp  sala.h  souvenirs.in.txt  staff_data.in.txt  townhall_data.in.txt
